// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rich text to JSX assetNodeToJsx should render an asset hyperlink 1`] = `
<AssetLink
  file={
    Object {
      "contentType": "image/jpg",
      "details": Object {
        "image": Object {
          "height": 500,
          "width": 800,
        },
        "size": 240963,
      },
      "fileName": "random-unsplash.jpg",
      "url": "https://source.unsplash.com/random/800x500",
    }
  }
  id="4fgGUXCJXWOQUAEQqCS8MW"
  title="Random photo from Unsplash.com"
  updatedAt="2019-01-14T04:57:27.049Z"
>
  ham hock
</AssetLink>
`;

exports[`Rich text to JSX assetNodeToJsx should render an asset hyperlink override 1`] = `
<Override
  file={
    Object {
      "contentType": "image/jpg",
      "details": Object {
        "image": Object {
          "height": 500,
          "width": 800,
        },
        "size": 240963,
      },
      "fileName": "random-unsplash.jpg",
      "url": "https://source.unsplash.com/random/800x500",
    }
  }
  id="4fgGUXCJXWOQUAEQqCS8MW"
  title="Random photo from Unsplash.com"
  updatedAt="2019-01-14T04:57:27.049Z"
>
  ham hock
</Override>
`;

exports[`Rich text to JSX assetNodeToJsx should render an embedded asset override 1`] = `
<Override
  file={
    Object {
      "contentType": "image/jpg",
      "details": Object {
        "image": Object {
          "height": 500,
          "width": 800,
        },
        "size": 240963,
      },
      "fileName": "random-unsplash.jpg",
      "url": "https://source.unsplash.com/random/800x500",
    }
  }
  id="4fgGUXCJXWOQUAEQqCS8MW"
  title="Random photo from Unsplash.com"
  updatedAt="2019-01-14T04:57:27.049Z"
/>
`;

exports[`Rich text to JSX assetNodeToJsx should render an embedded audio 1`] = `
<Audio
  file={
    Object {
      "contentType": "audio/mp3",
      "details": Object {
        "size": 24096,
      },
      "fileName": "example.mp3",
      "url": "https://spotify.com/example.mp3",
    }
  }
  id="4fgGUXCJXWOQUAEQqCS8MW"
  title="Example audio from Spotify"
  updatedAt="2019-01-14T04:57:27.049Z"
/>
`;

exports[`Rich text to JSX assetNodeToJsx should render an embedded image 1`] = `
<Image
  file={
    Object {
      "contentType": "image/jpg",
      "details": Object {
        "image": Object {
          "height": 500,
          "width": 800,
        },
        "size": 240963,
      },
      "fileName": "random-unsplash.jpg",
      "url": "https://source.unsplash.com/random/800x500",
    }
  }
  id="4fgGUXCJXWOQUAEQqCS8MW"
  title="Random photo from Unsplash.com"
  updatedAt="2019-01-14T04:57:27.049Z"
/>
`;

exports[`Rich text to JSX assetNodeToJsx should render an embedded video 1`] = `
<Video
  file={
    Object {
      "contentType": "video/mp4",
      "details": Object {
        "size": 2409638,
        "video": Object {
          "height": 1080,
          "width": 1920,
        },
      },
      "fileName": "example.mp4",
      "url": "https://youtube.com/example.mp4",
    }
  }
  id="4fgGUXCJXWOQUAEQqCS8MW"
  title="Example video from YouTube"
  updatedAt="2019-01-14T04:57:27.049Z"
/>
`;

exports[`Rich text to JSX assetNodeToJsx should render an unknown element if the mime type is undefined 1`] = `<UnknownElement />`;

exports[`Rich text to JSX assetNodeToJsx should render an unknown element if there is no component for the mime type 1`] = `
<UnknownElement
  file={
    Object {
      "contentType": "spreadsheet",
    }
  }
/>
`;

exports[`Rich text to JSX entryNodeToJsx should render an embedded entry block override 1`] = `
<Override
  contentType="page"
  id="32v7TZ7YQEaugOeew4SymY"
  slug="about"
  title="Title: About Acme Corp"
  updatedAt="2019-01-18T14:37:30.221Z"
/>
`;

exports[`Rich text to JSX entryNodeToJsx should render an embedded entry inline override 1`] = `
<Override
  contentType="page"
  id="32v7TZ7YQEaugOeew4SymY"
  slug="about"
  title="Title: About Acme Corp"
  updatedAt="2019-01-18T14:37:30.221Z"
/>
`;

exports[`Rich text to JSX entryNodeToJsx should render an entry hyperlink override 1`] = `
<Override
  contentType="route"
  id="32v7TZ7YQEaugOeew4SymY"
  slug="about"
  updatedAt="2019-01-18T14:37:30.221Z"
>
  This is a link to an entry.
</Override>
`;

exports[`Rich text to JSX entryNodeToJsx should render an unknown element if the content type is undefined 1`] = `<UnknownElement />`;

exports[`Rich text to JSX nodeToJsx should render an unknown element if the node type is undefined 1`] = `<UnknownElement />`;

exports[`Rich text to JSX parentNodeToJsx should render a node and its children 1`] = `
<ul>
  <li>
    <p>
      This is normal text.
      <strong>
        This is bold text.
      </strong>
      <em>
        This is italic text.
      </em>
      <u>
        This is underlined text.
      </u>
      <a
        href="https://acme.com"
      >
        This is a hyperlink.
      </a>
    </p>
  </li>
  <li>
    <p>
      This is normal text.
      <strong>
        This is bold text.
      </strong>
      <em>
        This is italic text.
      </em>
      <u>
        This is underlined text.
      </u>
      <a
        href="https://acme.com"
      >
        This is a hyperlink.
      </a>
    </p>
  </li>
  <li>
    <p>
      This is normal text.
      <strong>
        This is bold text.
      </strong>
      <em>
        This is italic text.
      </em>
      <u>
        This is underlined text.
      </u>
      <a
        href="https://acme.com"
      >
        This is a hyperlink.
      </a>
    </p>
  </li>
</ul>
`;

exports[`Rich text to JSX parentNodeToJsx should render a node without children 1`] = `<hr />`;

exports[`Rich text to JSX richTextToJsx should parse and render rich text into JSX 1`] = `
Array [
  <p>
    This is normal text.
    <strong>
      This is bold text.
    </strong>
    <em>
      This is italic text.
    </em>
    <u>
      This is underlined text.
    </u>
    <a
      href="https://acme.com"
    >
      This is a hyperlink.
    </a>
  </p>,
  <BlockElement
    contentType="page"
    id="32v7TZ7YQEaugOeew4SymY"
    slug="about"
    title="Title: About Acme Corp"
    updatedAt="2019-01-18T14:37:30.221Z"
  />,
  <Image
    file={
      Object {
        "contentType": "image/jpg",
        "details": Object {
          "image": Object {
            "height": 500,
            "width": 800,
          },
          "size": 240963,
        },
        "fileName": "random-unsplash.jpg",
        "url": "https://source.unsplash.com/random/800x500",
      }
    }
    id="4fgGUXCJXWOQUAEQqCS8MW"
    title="Random photo from Unsplash.com"
    updatedAt="2019-01-14T04:57:27.049Z"
  />,
]
`;

exports[`Rich text to JSX textNodeToJsx should render a text node 1`] = `"This is normal text."`;

exports[`Rich text to JSX textNodeToJsx should render a text node with a mark 1`] = `
<strong>
  This is bold text.
</strong>
`;

exports[`Rich text to JSX textNodeToJsx should render a text node with multiple marks 1`] = `
<em>
  <strong>
    This is bold and italic text.
  </strong>
</em>
`;

exports[`Rich text to JSX unknownNodeToJsx should render an unknown element 1`] = `
<UnknownElement>
  This is normal text.
  <strong>
    This is bold text.
  </strong>
  <em>
    This is italic text.
  </em>
  <u>
    This is underlined text.
  </u>
  <a
    href="https://acme.com"
  >
    This is a hyperlink.
  </a>
</UnknownElement>
`;
